--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.28.0",
+    "router": "^1.3.8",
     "web-vitals": "^4.2.4"
   },
   "devDependencies": {
